--- a/Main-task/style.css
+++ b/Main-task/style.css
@@ -13,24 +13,58 @@
 }
 .form-control::placeholder
 {
-    color:white !important ;
+    color: rgba(255, 255, 255, 0.2) !important ;
     opacity: 0.7;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: 0px;
 }
-#password ,#name
+.forget-password
+{color: rgba(255, 255, 255, 1);
+    font-family: Open Sans;
+font-weight: 400;
+font-size: 12px;
+line-height: 16.34px;
+letter-spacing: 0%;
+text-align: right;
+text-decoration: underline;
+text-decoration-style: solid;
+text-decoration-offset: Auto;
+text-decoration-thickness: Auto;
+text-decoration-skip-ink: auto;
+
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
+.forget-password:hover{
+    color: blue;
+    
+;
+}
+#password ,#name,#number,#new-name,#new-password,#new-email
 {
     border-radius: 2px;
     height: 50px;
 }
-.btn2
+.btn2,.btn1
 {
     border-radius: 0px !important;
-    background-color: rgb(68, 68, 68) !important;
-    opacity: 0.5;
+    background-color: rgb(76, 76, 76) !important;
+    /* opacity: 0.5; */
+    font-family: 'Rajdhani', sans-serif !important;
 }
 .btn
 {
     border-radius:  0px !important;
-    height: px;
+    border: none !important;
 }
 .form-label::after
 {
@@ -41,4 +75,115 @@
 {
     width: 100%;
     height:50px;
+}
+.number
+{
+    margin: 0px !important;
+    padding:0px !important;
+}
+.div-number
+{
+    padding-left: 0px !important;
+}
+#signInForm, #signUpForm {
+    display: none;
+    padding: 0px 60px;
+}
+
+#signInForm.active, #signUpForm.active {
+    display: block;
+}
+body{
+    overflow-x: hidden;
+    height: 100vh;
+}
+.btns .btn {
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 30.62px;
+    letter-spacing: 0;
+    text-align: center;
+}
+.btns .btn.active {
+    background-color: #EBA832 !important;
+    color: rgb(255, 255, 255) !important;
+    
+}
+input
+{
+    color: rgb(251, 250, 250) !important;
+    border: 1px solid rgba(255, 255, 255, 0.2) !important;
+    
+}
+.logo
+{
+    padding: 20px 80px 20px 80px;
+    gap: 10px;
+    margin: 10px;
+}
+input[type="checkbox"] {
+    accent-color:grey !important;
+    opacity: 0.1;
+    background-color: rgb(63, 63, 63);
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 4px;
+    cursor: pointer;
+}
+input[type="checkbox"]:checked {
+    accent-color: white;
+    border-color: white;
+    background-color: white;
+}
+input[type="checkbox"]::after{
+    border-color: red;
+}
+*
+{
+    padding:0px;
+    margin: 0px;
+}
+.right-panel {
+    position: fixed; 
+    top: 0;
+    right: 0;
+    width: 50%; 
+    height: 100vh; 
+    overflow: hidden; 
+}
+#signupErr,#passErr
+{
+    color: red;;
+}
+.right-panel img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
+
+label
+{
+    font-family: 'Rajdhani', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17.86px;
+    letter-spacing: 0;
+}
+.sign
+{
+    font-family: 'Open Sans', sans-serif !important;
+    font-weight: 600 !important;
+    font-size: 16px !important;
+    line-height: 21.79px !important;
+    letter-spacing: 0px !important;
+    width: 466px;
+height: 52px;
+gap: 16px;
+padding-top: 16px;
+padding-right: 38px;
+padding-bottom: 16px;
+padding-left: 38px;
+
 }
