--- a/Main-task/home.css
+++ b/Main-task/home.css
@@ -144,7 +144,7 @@ letter-spacing: 0px;
             line-height: 56px;
             letter-spacing: 1%;
             width: 705;
-height: 112;
+height: 112px;
 gap: 92px;
 
 }
