--- a/Main-task/style.css
+++ b/Main-task/style.css
@@ -4,6 +4,7 @@
             flex: 1;
             height: 2px;
             background-color: white;
+            opacity: 0.2;
         }
 .or {
     display: flex;
@@ -21,19 +22,27 @@
     line-height: 27px;
     letter-spacing: 0px;
 }
+select
+{
+    color: blue ;
+}
+select option
+{
+    color: rgba(255, 255, 255, 0.2) !important ;
+}
 .forget-password
 {color: rgba(255, 255, 255, 1);
     font-family: Open Sans;
 font-weight: 400;
-font-size: 12px;
+font-size: 16px;
 line-height: 16.34px;
-letter-spacing: 0%;
+/* letter-spacing: 0%;
 text-align: right;
 text-decoration: underline;
 text-decoration-style: solid;
 text-decoration-offset: Auto;
 text-decoration-thickness: Auto;
-text-decoration-skip-ink: auto;
+text-decoration-skip-ink: auto; */
 
 }
 input::-webkit-outer-spin-button,
@@ -112,7 +121,7 @@ body{
     color: rgb(255, 255, 255) !important;
     
 }
-input
+input,select
 {
     color: rgb(251, 250, 250) !important;
     border: 1px solid rgba(255, 255, 255, 0.2) !important;
@@ -126,16 +135,14 @@ input
 }
 input[type="checkbox"], input[type="radio"]{
     accent-color:grey !important;
-    opacity: 0.1;
+    opacity: .5;
     background-color: rgb(63, 63, 63);
-    border: 2px solid rgb(255, 255, 255);
+    /* border: px solid rgb(255, 255, 255); */
     border-radius: 4px;
     cursor: pointer;
 }
 input[type="checkbox"]:checked,input[type="radio"]:checked {
-    accent-color: white;
-    border-color: white;
-    background-color: white;
+    opacity:0.3;
 }
 /* input[type="checkbox"]::after{
     border-color: red;
